Bug 92016 - Multi-tap-and-drag sends one too many clicks
Summary: Multi-tap-and-drag sends one too many clicks
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.0.1
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-16 02:13 UTC by Anders Kaseorg
Modified: 2015-09-18 18:54 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
fix the multitap click count (1.35 KB, patch)
2015-09-17 23:17 UTC, Peter Hutterer
Details | Splinter Review

Description Anders Kaseorg 2015-09-16 02:13:15 UTC
Currently,
• tap-down-move results in a click-and-drag,
• tap-tap-down-move results in a triple-click-and-drag,
• tap-tap-tap-down-move results in a quadruple-click-and-drag,
etc.  So it’s impossible to get a double-click-and-drag, which typically means I can select lines but not words.

I would expect
• tap-down-move results in a click-and-drag,
• tap-tap-down-move results in a double-click-and-drag,
• tap-tap-tap-down-move results in a triple-click-and-drag,
etc.
Comment 1 Peter Hutterer 2015-09-17 22:52:25 UTC
what version are you on? If I tap-tap-down-move, I get press/release, press/release, press ... move which is the correct number, right?
Comment 2 Anders Kaseorg 2015-09-17 22:57:52 UTC
I’m on 1.0.1.  What I’m saying is that’s not the correct number.  tap-tap-down-move should result in press/release, press, move.  That is, it should result in one more click than tap-down-move, not two more clicks.
Comment 3 Peter Hutterer 2015-09-17 23:08:24 UTC
oh, whoops. indeed, that's a bug
Comment 4 Peter Hutterer 2015-09-17 23:17:38 UTC
Created attachment 118337 [details] [review]
fix the multitap click count

How's this one?
Comment 5 Anders Kaseorg 2015-09-18 00:39:20 UTC
That works for me.
Comment 7 Peter Hutterer 2015-09-18 18:54:17 UTC
commit d92ae62dad53afd894aec3c47081780ef3d9b4d2
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Sep 18 09:14:43 2015 +1000

    touchpad: fix the number of button clicks in multitap


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.