test/touchpad-tap.c
@@ -191,7 +191,7 @@ START_TEST(touchpad_1fg_multitap_n_drag_move)
 	litest_touch_move_to(dev, 0, 50, 50, 70, 50, 10, 4);
 	libinput_dispatch(li);
 
-	for (ntaps = 0; ntaps <= range; ntaps++) {
+	for (ntaps = 0; ntaps < range; ntaps++) {
 		event = libinput_get_event(li);
 		ptrev = litest_is_button_event(event,
 					       BTN_LEFT,
@@ -261,7 +261,7 @@ START_TEST(touchpad_1fg_multitap_n_drag_2fg)
 	litest_touch_down(dev, 1, 70, 50);
 	libinput_dispatch(li);
 
-	for (ntaps = 0; ntaps <= range; ntaps++) {
+	for (ntaps = 0; ntaps < range; ntaps++) {
 		event = libinput_get_event(li);
 		ptrev = litest_is_button_event(event,
 					       BTN_LEFT,
@@ -393,7 +393,7 @@ START_TEST(touchpad_1fg_multitap_n_drag_timeout)
 	litest_timeout_tap();
 	libinput_dispatch(li);
 
-	for (ntaps = 0; ntaps <= range; ntaps++) {
+	for (ntaps = 0; ntaps < range; ntaps++) {
 		event = libinput_get_event(li);
 		ptrev = litest_is_button_event(event,
 					       BTN_LEFT,
@@ -464,7 +464,7 @@ START_TEST(touchpad_1fg_multitap_n_drag_tap)
 	litest_timeout_tap();
 	libinput_dispatch(li);
 
-	for (ntaps = 0; ntaps <= range; ntaps++) {
+	for (ntaps = 0; ntaps < range; ntaps++) {
 		event = libinput_get_event(li);
 		ptrev = litest_is_button_event(event,
 					       BTN_LEFT,
@@ -537,7 +537,7 @@ START_TEST(touchpad_1fg_multitap_n_drag_tap_click)
 	litest_timeout_tap();
 	libinput_dispatch(li);
 
-	for (ntaps = 0; ntaps <= range; ntaps++) {
+	for (ntaps = 0; ntaps < range; ntaps++) {
 		event = libinput_get_event(li);
 		ptrev = litest_is_button_event(event,
 					       BTN_LEFT,
